# dingo-serial

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/serial/: buf.cc  buf.h  compiler.h  counter.h  keyvalue.cc  keyvalue.h  record_decoder.cc  record_decoder.h  record_encoder.cc  record_encoder.h  utils.cc  utils.h
src/serial/schema/: base_schema.h  boolean_list_schema.cc  boolean_list_schema.h  boolean_schema.cc  boolean_schema.h  dingo_schema.h  double_list_schema.cc  double_list_schema.h  double_schema.cc  double_schema.h  float_list_schema.cc  float_list_schema.h  float_schema.cc  float_schema.h  integer_list_schema.cc  integer_list_schema.h  integer_schema.cc  integer_schema.h  long_list_schema.cc  long_list_schema.h  long_schema.cc  long_schema.h  string_list_schema.cc  string_list_schema.h  string_schema.cc  string_schema.h
test/: CMakeLists.txt  test_buf.cc  test_performance.cc  test_schema.cc  test_serial.cc  test_serial_list_type.cc  test_serial_selection.cc
